public_html/css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
/* Primary: Bright Blue Violet */
--primary-100: #FCF2FF;
--primary-200: #ECC3FF;
--primary-300: #D694FC;
--primary-400: #B863F6;
--primary-500: #9234EB;
--primary-600: #6013BA;
--primary-700: #3A0688;
--primary-800: #1F0257;
--primary-900: #0B0126;

/* Accent: Fish Boy */
--accent-100: #F2FCFF;
--accent-200: #BBF1FE;
--accent-300: #82EAFA;
--accent-400: #49E2EF;
--accent-500: #14D5D9;
--accent-600: #07ACA5;
--accent-700: #018073;
--accent-800: #005346;
--accent-900: #00261E;

/* Neutral */
--neutral-100: #FCFAFC;
--neutral-200: #E9E6EB;
--neutral-300: #D7D2D9;
--neutral-400: #C4BFC7;
--neutral-500: #B1ACB5;
--neutral-600: #8D8891;
--neutral-700: #69656E;
--neutral-800: #46434A;
--neutral-900: #242226;
}

html {
  scroll-behavior: smooth;
}

body {
transition: all 0.5s ease;
}

/*Drk mode styling*/
body.dark {
background-color: #07120d;
transition: all 0.5s ease;
color: white;
}

body.dark #theme-toggle-button {
color: #B863F6;
transition: all 0.5s ease;
}

body.dark main h1 {
transition: all 0.5s ease;
}

body.dark #main-header button {
  background-color: #07120d;
  transition: all 0.5s ease;
}

/* Index Styling */
.featurette-divider {
color: var(--primary-700);
}

#theme-toggle-button {
background-color: #212529;
border: none;
color: white;
scale: 1.5;
transition: all 0.5s ease;
}

#main-header {
padding: 2rem;
display: flex;
justify-content: center;
align-items: center;
min-height: 100vh; /* Ensure the section takes up the full height of the viewport */
}

#main-header button {
  position: absolute; /* Position the arrow absolutely */
  bottom: 20px; /* Adjust the distance from the bottom */
  border: none;
  background-color: white;
  color: var(--accent-600);
  transition: all 0.5s ease;
}


#scroll-button.button.clicked {
  color: var(--primary-500);
  transform: translateY(80px);
}


#main-header h1 {
display: block;
padding: 0.2em;
transition: all 0.5s ease;
color: black;
font-size: 10em;
text-align: center;
background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
background-clip: text; /* Clip the background to the padding box */
color: transparent; /* Hide the text */
}

@media screen and (max-width: 596px) {
  #main-header h1 {
    font-size: 5em;
    padding-bottom: 3em;
  }
}

@media screen and (max-width: 511px) {
  img {
    width: 70%;
  }
}

h2.featurette-heading .last-word {
  background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
  background-clip: text; /* Clip the background to the padding box */
  color: transparent; /* Hide the text */
}

h2.featurette-heading .first-word {
  background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
  background-clip: text; /* Clip the background to the padding box */
  color: transparent; /* Hide the text */
}


@keyframes slideInFromLeft {
0% {
transform: translateX(-100%);
}

100% {
transform: translateX(0);
}

}

@keyframes slideInFromRight {
0% {
transform: translateX(100%);
}
100% {
transform: translateX(0);
}
}
@keyframes slideInFromBottom {
0% {
transform: translateY(100%);
}
100% {
transform: translateY(0);
}
}
@keyframes slideInFromTop {
0% {
transform: translateY(-100%);
}
100% {
transform: translateY(0);
}
}
.animate {
opacity: 0;
}

footer {
text-align: center;
}

.animate.slideInFromLeft {
opacity: 100;  
animation: slideInFromLeft 1.5s ease-out;
}

.bd-placeholder-img {
font-size: 1.125rem;
text-anchor: middle;
-webkit-user-select: none;
-moz-user-select: none;
user-select: none;
}

@media (min-width: 768px) {
.bd-placeholder-img-lg {
font-size: 3.5rem;
}
}

/* About page styling */


/*Service Styling*/

.service {
  border: none;
  padding-top: 10em;
  padding-bottom: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.service h1 {
  padding-bottom: 0.1em;
  font-size: 8em;
  text-align: center;
  background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
  background-clip: text; /* Clip the background to the padding box */
  color: transparent; /* Hide the text */
}

.service p {
  text-align: center;
  font-size: 2em;
}

#contact-message {
  font-size: 1.5em;
}

@media screen and (max-width: 882px) {
  .service h1 {
    font-size: 3em;
  }
  .service p {
    font-size: 1.5em;
  }
  
}

@media screen and (max-width: 882px) {
  .service h1 {
    margin: 0; /* Remove any margin */
    padding: 0; /* Remove any padding */
    font-size: 3em;
  }
  .service p {
    font-size: 1.5em;
    margin: 0; /* Remove any margin */
    padding: 0; /* Remove any padding */
  }
  #contact-message {
    font-size: 1em;
  }  
}


/*Join page styling*/

.application-form {
  width: 100%;
  height: 90vh;
  border: none;
  padding-top: 5em;
  animation: slideInFromBottom 1.2s ease-out;
}

.b-example-divider {
width: 100%;
height: 3rem;
background-color: rgba(0, 0, 0, .1);
border: solid rgba(0, 0, 0, .15);
border-width: 1px 0;
box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.b-example-vr {
flex-shrink: 0;
width: 1.5rem;
height: 100vh;
}

.bi {
vertical-align: -.125em;
fill: currentColor;
}

.nav-scroller {
position: relative;
z-index: 2;
height: 2.75rem;
overflow-y: hidden;
}

.nav-scroller .nav {
display: flex;
flex-wrap: nowrap;
padding-bottom: 1rem;
margin-top: -1px;
overflow-x: auto;
text-align: center;
white-space: nowrap;
-webkit-overflow-scrolling: touch;
}

.btn-bd-primary {
--bd-violet-bg: #712cf9;
--bd-violet-rgb: 112.520718, 44.062154, 249.437846;

--bs-btn-font-weight: 600;
--bs-btn-color: var(--bs-white);
--bs-btn-bg: var(--bd-violet-bg);
--bs-btn-border-color: var(--bd-violet-bg);
--bs-btn-hover-color: var(--bs-white);
--bs-btn-hover-bg: #6528e0;
--bs-btn-hover-border-color: #6528e0;
--bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
--bs-btn-active-color: var(--bs-btn-hover-color);
--bs-btn-active-bg: #5a23c8;
--bs-btn-active-border-color: #5a23c8;
}

.bd-mode-toggle {
z-index: 1500;
}

.bd-mode-toggle .dropdown-menu .active .bi {
display: block !important;
}

